# rchat

./: .gitignore  404.html  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  svelte.md  vite.config.js  zova-migration-checklist.md
.agent/rules/: rule-1.md  rule-2.md  rule-3.md
.agent/workflows/: bug-fix.md
_app/: version.json
assets/: rchat-demo.webm
internal/: version.json
scripts/: check-command-parity.mjs
src/: app.css  app.html  theme.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/apple-metal-shim/: Cargo.toml
src-tauri/crates/apple-metal-shim/src/: lib.rs
src-tauri/crates/rchat-audio-processing/: Cargo.toml
src-tauri/crates/rchat-audio-processing/src/: lib.rs
src-tauri/crates/rchat-libvpx/: Cargo.toml  build.rs
src-tauri/crates/rchat-libvpx/native/: rchat_vpx.c  rchat_vpx.h
src-tauri/crates/rchat-libvpx/src/: lib.rs
src-tauri/crates/rchat-screen-capture/: Cargo.toml
src-tauri/crates/rchat-screen-capture/src/: lib.rs
src-tauri/crates/rchat-screen-capture/src/platform/: linux.rs  macos.rs  unsupported.rs
src-tauri/crates/rchat-video-capture/: Cargo.toml
src-tauri/crates/rchat-video-capture/src/: lib.rs
src-tauri/crates/sonora-aec3/: Cargo.toml
src-tauri/crates/sonora-aec3/src/: adaptive_fir_filter.rs
src-tauri/icons/: icon.icns
src-tauri/scripts/: deb-postinstall.sh  deb-preinstall.sh  deb-preremove.sh  rpm-postremove.sh  rpm-preinstall.sh
src-tauri/src/: app_state.rs  chat_identity.rs  chat_kind.rs  debug_crypto.rs  lib.rs  main.rs  oauth.rs
src-tauri/src/chat/: group_chat.rs  message.rs
src-tauri/src/commands/: auth.rs  call.rs  chat.rs  chat_details.rs  debug.rs  envelopes.rs  invite.rs  media.rs  mod.rs  network_control.rs  peer_profile.rs
src-tauri/src/live/: mod.rs
src-tauri/src/live/broadcast/: broadcast.rs  manager.rs  mod.rs  protocol.rs
src-tauri/src/live/video/: codec.rs  manager.rs  mod.rs  protocol.rs  video.rs
src-tauri/src/live/voice/: codec.rs  jitter.rs  manager.rs  mod.rs  protocol.rs  voice.rs
src-tauri/src/network/: behaviour.rs  command.rs  direct_message.rs  discovery.rs  gist.rs  gossip.rs  hks.rs  invite.rs  manager.rs  mdns.rs  mdns_sd.rs  mod.rs  stun.rs  voice_stream.rs
src-tauri/src/network/manager/: mod.rs  persistence.rs  punching.rs  run_loop.rs  swarm_events.rs  tests.rs  transfer.rs  ui_commands.rs
src-tauri/src/network/manager/swarm_events/: connections.rs  direct_message.rs  gossipsub.rs
src-tauri/src/network/manager/ui_commands/: control.rs  dm.rs  group.rs
src-tauri/src/storage/: config.rs  db.rs  mod.rs  object.rs  theme.rs
src-tauri/themes/: arctic_ice.json  cyberpunk_glow.json  earthy_minimal.json  forest_night.json  midnight_neon.json  monochrome_pro.json  ocean_breeze.json  rose_noir.json  soft_pastel.json  solar_flare.json
src/components/: ChatArea.svelte  ContextMenu.svelte  EnvelopeItem.svelte  GitHubButton.svelte  GroupChatModal.svelte  NewPersonModal.svelte  PeerItem.svelte  SettingsPanel.svelte  Sidebar.svelte  (+2 more)
tests/: appSession.test.ts  appSessionEnsure.test.ts  authGate.test.ts  callPermissions.test.ts  cameraToggle.test.ts  canvasContext.test.ts  i420.test.ts  liveSupport.test.ts  mediaTest.test.ts  remoteVideoReceive.test.ts  screenBroadcastProfile.test.ts  viteConfig.test.ts
(+78 files in other folders)
