[package]
name = "rchat-screen-capture"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt", "sync"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-metal = "=0.8.7"
screencapturekit = { version = "8.0.0", features = ["async", "macos_14_0"] }

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13.12", features = ["screencast"] }
pipewire = "0.10.0"
